fixes spacing for p.mais & between sections

--- a/assets/less/site.less
+++ b/assets/less/site.less
@@ -58,7 +58,6 @@ article.tema {
 
   header, section {
     margin: 0;
-    margin-bottom: 30px;
     text-align: justify;
 
     h1, h2 {
@@ -89,6 +88,7 @@ article.tema {
 
   header {
     overflow: auto;
+    margin-bottom: 30px;
 
     figure {
       float: left;
@@ -135,6 +135,8 @@ article.tema {
   }
 
   section {
+    margin-bottom: 10px;
+
     ul {
       list-style: none;
       padding: 0;
@@ -149,7 +151,8 @@ article.tema {
     }
 
     p.mais {
-      margin-top: 1.2em;
+      margin: 0;
+      padding-top: 1.2em;
       display: block;
       text-align: right;
       font-weight: bold;
